--- a/guns-admin/src/main/resources/application.yml
+++ b/guns-admin/src/main/resources/application.yml
@@ -46,8 +46,8 @@ spring:
       max-file-size: 100MB #最大文件大小
   devtools:
     restart:
-      enabled: false #是否开启开发者工具（true/false）
-      additional-paths: src/main/java
+      enabled: true #是否开启开发者工具（true/false）
+      additional-paths: guns-admin/src/main/java
       exclude: static/**,WEB-INF/view/**
   aop:
     proxy-target-class: true #false为启用jdk默认动态代理,true为cglib动态代理
