--- a/guns-parent/pom.xml
+++ b/guns-parent/pom.xml
@@ -28,7 +28,7 @@
         <guns.version>1.0.0-SNAPSHOT</guns.version>
         <mybatisplus-spring-boot-starter.version>1.0.4</mybatisplus-spring-boot-starter.version>
         <shiro.version>1.4.0</shiro.version>
-        <mybatis-plus.version>2.1.0</mybatis-plus.version>
+        <mybatis-plus.version>2.1.9</mybatis-plus.version>
         <fastjson.version>1.2.41</fastjson.version>
         <commons.io.version>2.5</commons.io.version>
         <velocity.version>1.7</velocity.version>
@@ -43,6 +43,7 @@
         <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
         <jwt.version>0.7.0</jwt.version>
         <flowable.version>6.2.0</flowable.version>
+        <hutool-all.version>4.0.5</hutool-all.version>
     </properties>
 
     <dependencyManagement>
@@ -167,6 +168,12 @@
                 <artifactId>jjwt</artifactId>
                 <version>${jwt.version}</version>
             </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-all.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
