--- a/guns-rest/src/main/resources/application.yml
+++ b/guns-rest/src/main/resources/application.yml
@@ -38,3 +38,7 @@ logging:
   level.com.stylefeng: debug
   path: logs/
   file: guns-rest.log
+
+api:
+  weatherUrl: http://wthrcdn.etouch.cn/WeatherApi
+  xianxingUrl: http://www.bjjtgl.gov.cn
