--- a/guns-parent/pom.xml
+++ b/guns-parent/pom.xml
@@ -46,9 +46,10 @@
         <hutool-all.version>4.0.7</hutool-all.version>
         <JSON-java.version>20180130</JSON-java.version>
         <selenium-java.version>3.11.0</selenium-java.version>
-        <htmlunit-driver.version>2.29.0</htmlunit-driver.version>
-        <selenium-server.version>3.0.1</selenium-server.version>
-        <selenium-api.version>3.4.0</selenium-api.version>
+        <htmlunit-driver.version>2.35.1</htmlunit-driver.version>
+        <selenium-api.version>3.141.59</selenium-api.version>
+        <selenium.version>3.141.59</selenium.version>
+        <htmlunit.version>2.35.0</htmlunit.version>
         <joda-time.version>2.9.9</joda-time.version>
     </properties>
 
@@ -197,12 +198,40 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-server</artifactId>
-                <version>${selenium-server.version}</version>
+                <version>${selenium.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-api</artifactId>
-                <version>${selenium-api.version}</version>
+                <version>${selenium.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-support</artifactId>
+                <version>${selenium.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-firefox-driver</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-chrome-driver</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-ie-driver</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.htmlunit</groupId>
+                <artifactId>htmlunit</artifactId>
+                <version>${htmlunit.version}</version>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
