--- a/guns-rest/src/main/resources/application.yml
+++ b/guns-rest/src/main/resources/application.yml
@@ -11,6 +11,7 @@ jwt:
 
 server:
   port: 80 #项目端口
+  context-path: /weather
 
 mybatis-plus:
   mapper-locations: classpath*:com/stylefeng/guns/rest/**/mapping/*.xml
@@ -35,10 +36,11 @@ spring:
 
 logging:
   level.root: info
-  level.com.stylefeng: debug
+  level.com.stylefeng: info
   path: logs/
   file: guns-rest.log
 
 api:
   weatherUrl: http://wthrcdn.etouch.cn/WeatherApi
-  xianxingUrl: http://www.bjjtgl.gov.cn
+  xianxingUrl: http://jtgl.beijing.gov.cn/
+  pmUrl: http://api.k780.com/
